--- a/post-service/src/main/resources/application.properties
+++ b/post-service/src/main/resources/application.properties
@@ -2,12 +2,13 @@ server.port=8081
 
 spring.application.name=post-service
 
-# Configuração do banco de dados MySQL
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/blog?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# ConfiguraÃ§Ã£o do banco de dados MySQL
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3307/blog?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://172.23.80.1:3307/blogdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=blog
 spring.datasource.password=blog
 
-# Configuração do JPA / Hibernate
+# ConfiguraÃ§Ã£o do JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
