--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -19,8 +19,8 @@ spring:
         interval: 25s
     gateway:
       httpclient:
-        connect-timeout: 2000
-        response-timeout: 10s
+        connect-timeout: 5000
+        response-timeout: 60s
       globalcors:
         corsConfigurations:
           "[/**]":
@@ -42,7 +42,7 @@ spring:
             - name: Retry
               args:
                 retries: 3
-                methods: GET,POST,PUT,DELETE
+                methods: GET,PUT,DELETE
 
         - id: email-service
           uri: lb://email-service
@@ -106,15 +106,9 @@ management:
       show-details: always
     gateway:
       enabled: true
-
-# Observability configurations
-management:
   tracing:
     sampling:
       probability: 1.0  # 100% tracing for development
   zipkin:
     tracing:
       endpoint: http://zipkin:9411/api/v2/spans
-spring:
-  profiles:
-    active: prod
